Corrigida a função de atualizar votos.
